# mosaik-hils

./: .gitignore  AGENTS.md  CLAUDE.md  ORBITAL_HILS_PLAN.md  README.md  README_time_based_conversion.md  custom_web_server.py  data_collector.py  hardware_simulator.py  main.py  numerical_simulator.py  pyproject.toml  ruff.toml  simulation_data.json
common_utils/: __init__.py
delay_estimation/: .gitignore  IMPLEMENTATION_GUIDE.md  MCKF.md  MCKF_DETAILED.md  MCKF_README.md  MCKF_RESULTS.md  README.md  README_MCKF_implementation.md  __init__.py  main.py  test_mckf.py  test_mckf_monte_carlo.py  test_mckf_paper.py  test_mckf_simple.py
docs/: MOSAIK_TIMING.md  PROJECT_STRUCTURE.md  WEBVIS_CUSTOMIZATION.md  hils_delay_compensation_plan.md  mosaik_beginner_guide.md
figures_for_paper/: GAIN_COMPARISON_SUMMARY.md  compare_compensation_gain.py  compare_inverse_comp_effect.py  fix_imports.py  plot_config.py  plot_deviation_all_gains.py  plot_deviation_by_gain.py  run_all_figures.py  test_save_both_sizes.py  update_all_scripts.py
hils_simulation/: PLANT_LAG_VERIFICATION.md  PLANT_SWEEP_EXAMPLES.md  QUICK_TEST_VARIABILITY.md  analyze_plant_delay.py  check_command_discreteness.py  check_update_timing_original.py  compare_positions.py  debug_inverse_comp.py  main.py  main_hils.py  run_delay_sweep.py  run_delay_sweep_advanced.py  run_gain_sweep.py  test_inverse_timing.py  test_plant_lag.py  test_plant_sweep.py  visualize_results.py
inverse_comp_demo/: README.md  run_command_inverse_comp_demo.py  run_inverse_comp_demo.py  run_pd_control_inverse_comp_demo.py
src/: __init__.py
(+696 files in other folders)
