[project]
name = "mosaik-hils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mosaik>=3.5.0",
    "mosaik-api",
    "setuptools",
    "pandas",
    "mosaik-web",
    "mosaik-csv",
    "ruff>=0.14.0",
    "matplotlib>=3.9.4",
    "h5py>=3.11.0",
    "python-dotenv>=1.1.1",
    "numpy>=2.0.2",
    "marimo>=0.17.0",
    "tabulate>=0.9.0",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
]

[tool.ruff]
target-version = "py39"
line-length = 200
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
